--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1.6;
-  /* height: 97vh; */
 }
 
 img {
@@ -57,7 +56,6 @@ h1 {
 h2 {
   font-family: "Jersey15", "Helvetica", sans-serif;
   font-weight: normal;
-  /* font-size: 5rem; */
 }
 
 p,
@@ -95,8 +93,6 @@ textarea {
   background: linear-gradient(to bottom, #306181, #416e8a);
   border-top: clamp(2px, 0.2vw, 5px) solid #5a88a3;
   border-left: clamp(2px, 0.2vw, 5px) solid #477088;
-
-  /* box-shadow: -1px -1px 0 0 black; */
 }
 
 #headerbox1 {
@@ -121,8 +117,6 @@ textarea {
   grid-area: headerbox2;
   position: relative;
   border-bottom: 1.3px solid #255870;
-  /* box-shadow: 0 1px 0 0 #255870; */
-
   margin-bottom: 0px;
   position: relative;
 }
@@ -141,8 +135,6 @@ textarea {
   height: 200%;
   background: #d76447;
   border: 0.1px solid black;
-  /* outline: 1px solid red; */
-  /* box-shadow: 5px solid red; */
   overflow: hidden;
   border-radius: 50%;
   bottom: -100%; /* Flyttar cirkeln ner så att dess centrum är i boxens hörn */
@@ -203,9 +195,6 @@ textarea {
   border-right: clamp(1px, 0.2vw, 1.5px) solid #000000;
   border-bottom: clamp(1px, 0.2vw, 2.5px) solid #000000;
   border-top: clamp(1px, 0.2vw, 2.5px) solid #4b7993;
-
-  /* border-bottom: clamp(1px, 0.2vw, 2.5px) solid #45839e; */
-  /* outline: 1.3px solid #255870; */
 }
 
 #headerbox5 h1 {
@@ -334,9 +323,7 @@ main {
   display: flex;
   flex-direction: row;
   align-items: flex-start; /* Säkerställer att allt börjar högst upp */
-  /* align-items: center; */
   border: clamp(1px, 0.2vw, 2.5px) solid black;
-  /* outline: clamp(1px, 0.2vw, 2.5px) solid black; */
   background-color: #f8f8f8;
   width: 100%;
 }
@@ -373,7 +360,7 @@ main {
 
 .facts {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Tre jämnt fördelade kolumner */
+  grid-template-columns: repeat(3, 1fr);
   gap: 1vw;
   border: clamp(1px, 0.2vw, 2.5px) solid black;
   border-top: none;
@@ -399,9 +386,7 @@ p.orange {
   margin: 0 auto;
   background-color: #d76447;
   text-align: right;
-  /* font-size: 12px; */
   color: #1a3d4b;
-  /* padding: 1px 1px 0 0; */
 }
 
 /*<---------------- Referens ---------------------->*/
@@ -498,7 +483,7 @@ p.orange {
   color: rgb(255, 249, 240);
 }
 .small-arrows {
-  font-size: 0.6em; /* Gör pilarna 80% av textstorleken */
+  font-size: 0.6em;
 }
 
 .form-label {
@@ -506,12 +491,9 @@ p.orange {
   color: #d76447;
 }
 #no-contact-text {
-  width: fit-content; /* Gör att den bara tar upp plats efter innehåll */
-  margin: 0 auto; /* Centrerar horisontellt */
+  width: fit-content;
+  margin: 0 auto;
 }
-/* #form-label-gender {
-  margin-right: 10%;
-} */
 
 /*--------------------Referens entries----------------------*/
 
@@ -521,11 +503,9 @@ p.orange {
   overflow-x: hidden;
   overflow-y: auto;
   padding-right: 20px;
-  /* border: 1px solid #8f8b8b; */
   margin-right: 1%;
 }
 
-/* background: linear-gradient(to bottom, #2f6f8a, #648391); */
 /* Bredden på scrollbaren */
 #guestbook-entries::-webkit-scrollbar {
   width: 1vw; /* Justera efter behov */
@@ -596,7 +576,6 @@ p.orange {
   display: flex;
   flex-direction: column;
   width: 100%;
-  /* height: 100%; */
   background-color: #f8f8f8;
   border: clamp(1px, 0.2vw, 2.5px) solid black;
   padding: 2%;
@@ -629,7 +608,7 @@ p.orange {
   max-width: 96px;
   max-height: 96px;
   height: auto;
-  aspect-ratio: 1/1; /* Fyrkantig */
+  aspect-ratio: 1/1;
   border: clamp(2px, 0.45vw, 8px) solid #2f6f8a;
   border-radius: 50%;
   cursor: pointer;
@@ -640,7 +619,7 @@ p.orange {
 
 .github-icon {
   position: absolute;
-  width: 5vw;
+  width: 4vw;
   max-width: 80px;
   max-height: 80px;
   aspect-ratio: 1 / 1;
@@ -649,7 +628,7 @@ p.orange {
 
 #cv-icon {
   position: absolute;
-  width: 5vw;
+  width: 4vw;
   max-width: 80px;
   max-height: 80px;
   aspect-ratio: 1 / 1;
@@ -658,7 +637,6 @@ p.orange {
 /*-------------Kunskap-----------------------------*/
 #knowledge {
   width: 100%;
-  /* max-height: 30vh; */
   background-color: #f8f8f8;
   border: clamp(1px, 0.2vw, 2.5px) solid black;
   padding: 2%;
@@ -673,7 +651,6 @@ p.orange {
   display: flex;
   flex-direction: row;
   max-width: 100%;
-  /* margin: 0 auto; */
   margin-top: 1%;
   justify-content: center;
   align-items: center;
@@ -705,20 +682,10 @@ p.orange {
 
 #knowledge-pic {
   display: flex;
-  /* width: clamp(122px, 32vh, 614px); */
   height: clamp(122px, 30vh, 322px);
   object-fit: contain;
   padding-left: 10%;
 }
-/* #knowledge-pic {
-  display: block;
-  flex-grow: 1; 
-  width: clamp(122px, 32vh, 614px);
-  height: auto;
-  max-width: 100%;
-  object-fit: contain;
-  padding-left: 10%;
-} */
 
 /*-------------Kontakt-----------------------------*/
 
@@ -810,14 +777,14 @@ p.orange {
 
 #phone-icon {
   position: absolute;
-  width: 5vw;
+  width: 4vw;
   max-height: 80px;
   max-width: 80px;
   aspect-ratio: 1 / 1;
 }
 #mail-icon {
   position: absolute;
-  width: 5vw;
+  width: 4vw;
   max-height: 80px;
   max-width: 80px;
   aspect-ratio: 1 / 1;
@@ -830,7 +797,7 @@ p.orange {
 }
 #linkedin-icon {
   position: absolute;
-  width: 5vw;
+  width: 4vw;
   max-height: 80px;
   max-width: 80px;
   aspect-ratio: 1 / 1;
@@ -840,22 +807,42 @@ p.orange {
   margin-left: 3%;
   display: inline;
 }
-#weather-container {
+
+/*<---------------- Confirmation POPUP ---------------------->*/
+#confirmation-popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #f8f8f8;
+  padding: 2%;
+  border: clamp(1px, 0.2vw, 2.5px) solid black;
+  box-shadow: 0 4px 6px rgba(3, 3, 3, 1);
+  text-align: center;
+  z-index: 1000;
   display: flex;
   flex-direction: column;
-  align-self: center;
-  padding: 10px;
-  width: 200px;
-  margin-bottom: 20px;
-}
-#weather-container p {
-  align-self: center;
+  align-items: center;
 }
 
-#weatherImage {
-  width: 4vw;
-  align-self: center;
-  filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.2)); /* Svag skugga */
+#confirmation-popup button {
+  font-family: Jersey15, Helvetica, sans-serif;
+  font-size: clamp(1rem, 2.4vw, 3rem);
+  margin-top: 10%;
+  padding: 3% 6%;
+  background-color: #2f6f8a;
+  color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+#confirmation-popup button:hover {
+  background-color: #265870;
+}
+
+#confirmation-popup.hidden {
+  display: none;
 }
 
 /*<---------------- Media queries ---------------------->*/
@@ -870,12 +857,6 @@ p.orange {
     margin-top: -5px;
     margin-bottom: -20px;
   }
-  /* .seperator {
-    font-size: 25px;
-  } */
-  /* #headerbox4 {
-    padding: 0% 2% 0% 5%;
-  } */
   #headerbox5 h1 {
     font-size: 1.8rem;
   }
@@ -970,9 +951,6 @@ p.orange {
   #headerbox4 ul {
     gap: 10px;
   }
-  /* .seperator {
-    font-size: 15px;
-  } */
   #headerbox5 h1 {
     font-size: 1rem;
   }
@@ -1021,10 +999,6 @@ p.orange {
   #headerbox4 ul {
     gap: 10px;
   }
-  /* .seperator {
-    font-size: 15px;
-  } */
-
   #headerbox5 h1 {
     font-size: 1rem;
   }
@@ -1053,11 +1027,12 @@ p.orange {
   }
 
   /*----------Guestbook----------------*/
+
   #guestbook-entries {
     min-width: 250px;
   }
 }
-/* (min-width: 666px) and */
+
 @media (max-width: 1024px) {
   .container {
     margin-top: 3vh;
@@ -1071,6 +1046,7 @@ p.orange {
     border-radius: 0 0 10px 10px;
   }
   /*----------Guestbook----------------*/
+
   #guestbook,
   #contact {
     flex-direction: column-reverse;
@@ -1089,10 +1065,6 @@ p.orange {
   }
 }
 @media (min-width: 1921px) {
-  /* body {
-    max-width: 1920px;
-    margin: 0;
-  } */
   .container {
     max-width: 1920px;
     margin: 10vh auto;
