--- a/style.css
+++ b/style.css
@@ -618,18 +618,28 @@ p.orange {
 
 .github-icon {
   position: absolute;
-  width: 4vw;
-  max-width: 80px;
-  max-height: 80px;
+  /* width: 4vw; */
+  width: 100%;
+  /* max-width: 100px;
+  max-height: 100px; */
   aspect-ratio: 1 / 1;
   margin-bottom: -18%;
+}
+.azure-icon {
+  position: absolute;
+  /* width: 4vw; */
+  width: 88%;
+  /* max-width: 100px;
+  max-height: 100px; */
+  aspect-ratio: 1 / 1;
+  margin-top: -13%;
 }
 
 #cv-icon {
   position: absolute;
-  width: 4vw;
-  max-width: 80px;
-  max-height: 80px;
+  width: 100%;
+  /* max-width: 80px;
+  max-height: 80px; */
   aspect-ratio: 1 / 1;
 }
 
@@ -796,12 +806,22 @@ p.orange {
 }
 #linkedin-icon {
   position: absolute;
-  width: 4vw;
-  max-height: 80px;
-  max-width: 80px;
+  width: 100%;
+  /* max-height: 80px;
+  max-width: 80px; */
   aspect-ratio: 1 / 1;
   color: #2f6f8a;
 }
+/* .azure-icon {
+  position: absolute;
+  width: 4vw;
+  width: 88%;
+  max-width: 100px;
+  max-height: 100px;
+  aspect-ratio: 1 / 1;
+  margin-top: -13%;
+} */
+
 .margin-p {
   margin-left: 3%;
   display: inline;
